# ml-research-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
experiments/: benchmark_init.py  train_mlp_mnist.py  train_transformer_lm.py
notebooks/: spectra.ipynb
src/spectra/: __init__.py  _backend.py  autograd.py  init.py  losses.py  ops.py  optim.py  tensor.py
src/spectra/analysis/: __init__.py  geometry.py  landscape.py  spectral.py
src/spectra/nn/: __init__.py  attention.py  linear.py  module.py  normalization.py  transformer.py
src/spectra/utils/: __init__.py  data.py  logging.py
tests/: test_autograd.py  test_geometry.py  test_landscape.py  test_lm.py  test_nn.py  test_optim_losses.py  test_smoke.py  test_spectral.py  test_tensor.py  test_transformer.py  test_utils.py
