[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectra"
version = "0.0.1"
description = "A linear-algebra-first deep learning framework with built-in spectral and geometric analysis, written from scratch in NumPy."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Raya Sergieva", email = "sergieva.raya@gmail.com" },
]
keywords = ["deep-learning", "machine-learning", "linear-algebra", "autograd", "numpy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.0",
]

[project.optional-dependencies]
analysis = [
    "scipy>=1.13",
    "pandas>=2.2",
    "matplotlib>=3.9",
]
experiments = [
    "spectra[analysis]",
    "tqdm>=4.66",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff==0.15.20",
    "pre-commit>=3.7",
]

[project.urls]
Repository = "https://github.com/RayaSergieva/ml-research-pipeline"
Issues = "https://github.com/RayaSergieva/ml-research-pipeline/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/spectra"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "analysis", "experiments"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "NPY",  # numpy-specific
]
ignore = [
    "E501",  # line too long, handled by formatter
    "N803",  # argument name should be lowercase (X, W common in math code)
    "N806",  # variable in function should be lowercase (same reason)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # asserts allowed in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
disallow_any_unimported = true
show_error_codes = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["scipy.*", "matplotlib.*", "tqdm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
disallow_any_decorated = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=spectra",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["spectra"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
